# Airlib

./: .gitattributes  .gitignore  CMakeLists.txt  FN.md  LICENSE  README.md  library.c  library.h  main.c  program  test.xpm
docs/: INSTALL.md  MAINTAINERS.md  NOTES.md  PLAN.md  docs.tex  index.html
include/: Airlib.h  Airlib_defs.h  audio.h  cute_airlib.h  cute_vdl.h  graphics.h  io.h  library.h  old.h  stb_easyfont.h  terminal.h  vdl.h  video.h
src/: airlib.c  audio.c  graphics.c  library.c  library.h  main.c  old.c  old.h
src/system/: old.c  terminal.c
src/system/Windows/: WIN_audio.c  WIN_graphics.c  WIN_io.c  WIN_video.c
src/system/gnu_linux/: linux_audio.c  linux_video.c
src/system/linux/: linux_audio.c  linux_graphics.c  linux_video.c
